--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>Countdown</title>
     <style>
       body {
-          background-color: black;
-          display: flex;
-          justify-content: center;
-          text-align: center;
-          flex-direction: column;
-          align-items: center;
-          font-family: 'Helvetica Neue';
-          color: white;
+        background-color: black;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        align-items: center;
+        font-family: 'Helvetica Neue';
+        color: white;
       }
 
       html, body {
@@ -20,20 +20,34 @@
         margin: 0; padding: 0;
       }
 
-      #countdown-content :not(marquee) {
+      #countdown-content {
         font-size: 18vw;
         font-weight: 100;
       }
 
       #countdown-content h2 {
-          font-size: 5vw;
+        font-size: 5vw;
+        font-weight: 100;
       }
 
       #countdown {
         margin: 0;
       }
+
+      .lol {
+        font-size: 20px;
+        font-weight: 400;
+      }
+
+      .lol:hover {
+        cursor: pointer;
+      }
     </style>
+    <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script>
+      var interval;
+      var slow = true;
+
       var to = new Date();
       to.setFullYear(2017);
       to.setMonth(9);
@@ -68,10 +82,21 @@
 
       document.addEventListener('DOMContentLoaded', function () {
         tick();
-        setInterval(() => {
+        interval = setInterval(() => {
           document.body.style.backgroundColor = getRandomColor();
-        }, 10)
+        }, 1000)
       })
+
+      $(document).ready(function() {
+        $(".lol").click(function() {
+          console.log("yeyeyeey");
+          slow = !slow;
+          clearInterval(interval);
+          interval = setInterval(() => {
+            document.body.style.backgroundColor = getRandomColor();
+          }, slow ? 1000 : 10)
+        });
+      });
     </script>
   </head>
   <body>
@@ -81,8 +106,10 @@
           <h2>Seconds until the 2017 HSC:</h2>
           <p id="countdown"></p>
 
-          <marquee style="color: white;" behavior="alternate">Ram says, "I am a software god!"</marquee>
-          <marquee style="color: white;" behavior="alternate">Credits: Ramanujan Kaniyur</marquee>
+          <div class="lol">
+            <marquee style="color: white;" behavior="alternate">Ram says, "I am a software god!"</marquee>
+            <marquee style="color: white;" behavior="alternate">Credits: Ramanujan Kaniyur</marquee>
+          </div>
         </div>
       </div>
     </div>
