Guess who doesn't even know how to link to a jQuery CDN... 😢

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         cursor: pointer;
       }
     </style>
-    <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
       var interval;
       var slow = true;
