Changed HSC start to Paper 1 start date.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       document.addEventListener('DOMContentLoaded', function () {
         var to = new Date();
         to.setFullYear(2017, 10, 16);
-        to.setHours(9, 25, 0, 0);
+        to.setHours(10, 20, 0, 0);
 
         var delay = 1000;
         document.body.style.transition = "background-color 1s ease-in-out";
@@ -93,13 +93,13 @@
     <div style="display:table;">
       <div style="display:table-cell;vertical-align:middle;">
         <div style="margin-left:auto;margin-right:auto;" id="countdown-content">
-          <h2>Seconds until the 2017 HSC:</h2>
+          <h2>Seconds until the English Advanced Paper 1:</h2>
           <p id="countdown"></p>
 
-          <div id="tickers">
+          <!-- <div id="tickers">
             <marquee style="color: white;" behavior="alternate">Ram says, "I am a software god!"</marquee>
             <marquee style="color: white;" behavior="alternate">Credits: Ramanujan Kaniyur</marquee>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
